--- a/styles/index.css
+++ b/styles/index.css
@@ -9,6 +9,39 @@ html, body {
   font-weight: 300;
 }
 
+.headbox h1 {
+  font-size: 240px;
+  font-weight: 500;
+  letter-spacing: -8px;
+  font-family: 'Readex Pro',sans-serif;
+}
+
+.mainlist {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size :12px;
+}
+
+.swiper {
+  width: 100%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
+
 .dark-mode {
   background-color: #272727;
   color: white;
