--- a/styles/primitive/palettes.css
+++ b/styles/primitive/palettes.css
@@ -34,6 +34,11 @@
   background-color: #16db65;
 }
 
+.gr-green {
+  background: linear-gradient(180deg, #06C15C, #79F23F);
+  animation: therotator 6s ease-in infinite;
+}
+
 .bk-yell {
   background-color: #f4d35e;
 }
