--- a/styles/primitive/typography.css
+++ b/styles/primitive/typography.css
@@ -76,9 +76,12 @@ cite {
 }
 
 small {
-  font-size: 14px;
+  font-size: 16px;
   margin: 0.5rem 0 .75rem 0;
   font-family: var(--official);
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 
 h6 {
