--- a/styles/primitive/typography.css
+++ b/styles/primitive/typography.css
@@ -107,7 +107,7 @@ h4 {
 
 h3 {
   font-size: 3.2rem;
-  font-weight: 900 !important;
+  font-weight: 600;
   line-height: 1.1;
   margin: 0.5rem 0 .75rem 0;
   font-family: 'inter tight',serif;
