--- a/styles/primitive/palettes.css
+++ b/styles/primitive/palettes.css
@@ -23,7 +23,7 @@
 }
 
 .bk-white {
-  background-color: #ffffff;
+  background-color: #fdfdfd;
 }
 
 .bk-white h1, .bk-white h2, .bk-white h3, .bk-white h4, .bk-white h5, .bk-white h6, .bk-white p {
