--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,7 @@ a {
 }
 
 .bk-black {
-  background-color: #242424;
+  background-color: #212121;
 }
 
 .mother {
@@ -34,13 +34,13 @@ a {
 
 
 .swiper-slide { 
-  width: 80vw; 
-  margin-left: 10vw;
+  width: 100vw; 
   height: 100vh;
   overflow: hidden;
   color: #272727;
   font-weight: 300;
   padding: 0;
+  justify-content: space-evenly;
 }
 
 .swiper-wrapper {
@@ -153,6 +153,7 @@ BOXES
   width: 12vw;
   height: 80vh;
   z-index: 999;
+  border: 1px solid red;
 }
 
 
@@ -329,6 +330,22 @@ STYLERS
   height: 25vh;
 }
 
+.ff-percent {
+  width: 100%;
+  height: 100%;
+}
+
+.w20-80 {
+  width: 20vw;
+  height: 80vh;
+}
+
+.w80-100 {
+  width: 80%;
+  height: 100vh;
+  justify-self: end !important;
+  align-self: end !important;
+}
 
 .cc {
   justify-content: center;
@@ -347,9 +364,6 @@ STYLERS
   align-items: end;
 }
 
-.b-b {
-  border-bottom: 1px solid #d7d7d7;
-}
 
 .m-b16 {
   margin-bottom: 16px;
@@ -391,9 +405,6 @@ STYLERS
 BORDERS
 ****************************************************************************************************************/
 
-.bb-g {
-  border-bottom: 1px solid #d7d7d7;
-}
 
 /****************************************************************************************************************
 SMALL
