--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -82,9 +82,10 @@
  
 }
 
-#line1, #line2, #line3, #line4, #line5, #line6 {
+#line1, #line2, #line3, #line4, #line5, #line6, #line7, #line8, #line9 {
   transform: translateX(-160px);
   margin-left: 24px;
+  cursor: pointer;
 }
 
 .sidenav:hover #line1 {
@@ -99,6 +100,26 @@
 }
 .sidenav:hover #line4 {
   animation: intoscene 0.34s ease-in 1s forwards;
+}
+
+.sidenav:hover #line5 {
+  animation: intoscene 0.34s ease-in 1.1s forwards;
+}
+
+.sidenav:hover #line6 {
+  animation: intoscene 0.34s ease-in 1.3s forwards;
+}
+
+.sidenav:hover #line7 {
+  animation: intoscene 0.34s ease-in 1.5s forwards;
+}
+
+.sidenav:hover #line8 {
+  animation: intoscene 0.34s ease-in 1.7s forwards;
+}
+
+.sidenav:hover #line9 {
+  animation: intoscene 0.34s ease-in 1.9s forwards;
 }
 
 @keyframes intoscene {
@@ -219,6 +240,8 @@ width: 100vw;
   width: 100vw;
   margin-bottom: -56px;
   border-bottom: 1px solid #272727;
+  align-items: center;
+  padding: 0 32px;
 }
 
 .isheader a {
@@ -232,4 +255,5 @@ width: 100vw;
   transition: all 0.25s ease-in;
   position: relative;
   padding-bottom: 8px;
+  line-height: 1rem;
 }
