--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -54,11 +54,13 @@
   transition: all 0.3s ease-out;
   transform: translatex(-32px);
   margin-top: 14vh;
+  box-shadow: 5px 5px 10px #121212;
 }
 
 .sidenav:hover {
 
-  box-shadow: 7px 8px 18px white;
+  background-color: #272727;
+  box-shadow: 5px 5px 10px #080808, -5px -5px 12px #111111;
 
 }
 
@@ -68,11 +70,11 @@
 
 .sidenav p {
   font-family: 'Inter Tight',sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   letter-spacing: 0px;
   opacity: 0.3;
-  color: #2ADD5A;
+  color: #d7d7d7;
   text-transform: capitalize;
   transition: all 0.25s ease-in;
   position: relative;
@@ -145,9 +147,9 @@
 }
 
 @keyframes gogreen {
-  0% { width: 0%; border-top: 1px solid #2ADD5A; height: 0%; }
-  33% { width: 100%; border-top: 1px solid #2add5a; height: 0; }
-  66% { width: 100% ; border-top: 1px solid #2add5a; height: 0%; }
+  0% { width: 0%; border-top: 1px solid #10c56c; height: 0%; }
+  33% { width: 100%; border-top: 1px solid #10c56c; height: 0; }
+  66% { width: 100% ; border-top: 1px solid #10c56c; height: 0%; }
   100% { width: 0%; border-top: 1px solid #474747; height: 0%; }
 }
 
@@ -158,7 +160,7 @@
 }
 
 .sidenav small:hover {
-  color: #2add5a;
+  color: #10c56c;
 }
 
 
@@ -215,7 +217,7 @@ width: 100vw;
 }
 
 .bdr-a {
-  border-right: 8px solid #2ADD5A;
+  border-right: 8px solid #10c56c;
 }
 
 .bdr-b {
