--- a/components/modules/header.module.css
+++ b/components/modules/header.module.css
@@ -1,36 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
 .isheader {
   position: fixed;
   z-index: 999;
-  background-color: #171717;
+  background-color: #ff3d00;
   display: flex;
   flex-direction: row;
   height: 56px;
   width: 100vw;
   margin-bottom: -56px;
-  border-bottom: 1px solid #272727;
+  border-bottom: 1px solid #d7d7d7;
   align-items: center;
   padding: 0 32px;
-}
-
-.isheader a {
-  font-family: 'Inter Tight',sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: 0px;
-  opacity: 1;
-  color: #474747;
-  text-transform: capitalize;
-  transition: all 0.25s ease-in;
-  position: relative;
-  padding-bottom: 0px;
-  line-height: 1rem;
-  transform: translatex(-80px);
+  transition: all 0.2s ease-out;
 }
 
 .isheader:hover {
-  box-shadow: 4px 4px 8px #060606 inset, -4px -5px 9px #020303;
-
+  border-bottom: 1px solid #10d56d;
 }
+
+.isheader a {
+  font-family: 'Readex Pro',sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0px;
+  opacity: 1;
+  color: white;
+  text-transform: capitalize;
+  transition: all 0.15s ease-in;
+  position: relative;
+  padding-bottom: 0px;
+  line-height: 1rem;
+  transform: translatey(-40px);
+  text-decoration: none;
+}
+
 
 .isheader:hover a {
   transform: translatex(0px);
