--- a/components/modules/layout.module.css
+++ b/components/modules/layout.module.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
 
 .layout {
   width: 100vw;
   height: 100%;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   color: #272727;
-  font-family: 'Inter Tight',sans-serif;
+  font-family: 'Readex Pro',sans-serif;
   display: flex;
   flex-direction: column;
 }
