--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -4,22 +4,23 @@
   flex-direction: column;
   position: fixed;
   z-index: 999;
-  background-color: #171717;
+  background-color: #ffffff;
   width: 20vw;
   height: 80vh;
   padding: 32px 32px 32px 32px ;
-  border-radius: 0 6px 6px 0;
   transition: all 0.3s ease-out;
   transform: translatex(-32px);
   margin-top: 14vh;
-  box-shadow: 5px 5px 10px #121212;
+  border-right:1px solid #d7d7d7;
+}
+
+.sidenav a {
+  text-decoration: none;
 }
 
 .sidenav:hover {
 
-  background-color: #272727;
-  box-shadow: 5px 5px 10px #080808, -5px -5px 12px #111111;
-
+  background-color: #fcfcfc;
 }
 
 .sidenav:hover p {
@@ -27,12 +28,12 @@
 }
 
 .sidenav p {
-  font-family: 'Inter Tight',sans-serif;
+  font-family: 'Readex Pro',sans-serif;
   font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0px;
-  opacity: 0.3;
-  color: #d7d7d7;
+  font-weight: 300;
+  letter-spacing: -0.5px;
+  opacity: 1;
+  color: #676767;
   text-transform: capitalize;
   transition: all 0.25s ease-in;
   position: relative;
@@ -94,7 +95,6 @@
   content: '';
   top: 0;
   left: 0;
-  border-bottom: 1px solid #474747; 
 }
 
 .sidenav:hover p::after {
