--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Readex Pro',sans-serif;
+}
+
 div {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  color: #474747;
-  background-color: #f1f1f1;
+  color: #272727;
+  background-color: #ffffff;
 }
 
 a {
@@ -103,4 +112,115 @@ width: 100vw;
 
 .bdr-d {
   border-right: 8px solid #FF3232;
+}
+
+
+p {
+  font-size: 20px;
+  line-height: 1.25;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: 'Stix Two Text',serif;
+}
+
+@keyframes forwardline {
+  from { width: 0%; } to { width: 100%; }
+}
+
+cite {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-style: normal;
+  letter-spacing: 0.5px;
+  font-family: var(--official);
+}
+
+small {
+  font-size: 16px;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: var(--official);
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+h6 {
+  font-size: 1.1rem;
+  font-weight: 300;
+  margin: 0.5rem 0 .75rem 0;
+  line-height: 1.25;
+  font-family: 'STIX Two Text',serif;
+}
+
+h5 {
+  font-size: 1.48rem;
+  font-weight: 600;
+  line-height: 1.1;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: 'STIX Two Text',serif;
+}
+
+h4 {
+  font-size: 2rem;
+  line-height: 1.1;
+  margin: 0.5rem 0 .75rem 0;
+  font-weight: 500;
+  font-family: 'STIX Two Text',serif;
+}
+
+h3 {
+  font-size: 3.2rem;
+  font-weight: 600;
+  line-height: 1.1;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: 'STIX Two Text',serif;
+}
+
+h2 {
+  font-size: 4.8rem;
+  font-weight: 900;
+  line-height: 1;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: 'STIX Two Text',serif;
+}
+
+h1 {
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 1;
+  text-transform: uppercase;
+  margin: 0.5rem 0 .75rem 0;
+  font-family: 'STIX Two Text',serif;
+}
+
+@media screen and (max-width: 899px) and (min-width: 769px) {
+
+  p { font-size: 1rem;}
+  h4 {font-size: 1.6rem; width: 100%;}
+
+}
+
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+
+  h1 { font-size: 6.4rem; }
+  h2 { font-size: 4rem; }
+  h3 { font-size: 2.8rem; }
+  h4 { font-size: 1.56rem; }
+  h5 { font-size: 1.4rem; }
+  h6 { font-size: 1rem; }
+  p { font-size: 1rem; }
+
+}
+
+@media screen and (max-width: 640px) {
+
+ h1 { font-size: 3.2rem; }
+ h2 { font-size: 2.4rem; }
+ h3 { font-size: 2rem; }
+ h4 { font-size: 1.32rem;}
+ h5 { font-size: 1.25rem;}
+ h6 { font-size: 15px; }
+ p { font-size: 15px; }
+ small { font-size: 12px; }
+
 }
