--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .sidenav {
   display: flex;
@@ -9,83 +10,27 @@
   height: 80vh;
   padding: 32px 32px 32px 32px ;
   transition: all 0.3s ease-out;
-  transform: translatex(-32px);
   margin-top: 14vh;
   border-right:1px solid #d7d7d7;
+  box-sizing: border-box;
 }
 
 .sidenav a {
   text-decoration: none;
 }
 
-.sidenav:hover {
-
-  background-color: #fcfcfc;
-}
-
-.sidenav:hover p {
-  opacity: 1;
-}
-
 .sidenav p {
-  font-family: 'Readex Pro',sans-serif;
+  font-family: 'Inter Tight',sans-serif;
   font-size: 16px;
-  font-weight: 300;
-  letter-spacing: -0.5px;
+  font-weight: 500;
   opacity: 1;
-  color: #676767;
+  color: #474747;
   text-transform: capitalize;
   transition: all 0.25s ease-in;
   position: relative;
-  padding-bottom: 8px;
+  padding: 4px 0;
   line-height: 1.5rem;
-  margin-left: 24px;
- 
-}
-
-#line1, #line2, #line3, #line4, #line5, #line6, #line7, #line8, #line9 {
-  transform: translateX(-160px);
-  margin-left: 24px;
-  cursor: pointer;
-}
-
-.sidenav:hover #line1 {
-  animation: intoscene 0.34s ease-in 0.6s forwards;
-}
-
-.sidenav:hover #line2 {
-  animation: intoscene 0.34s ease-in 0.7s forwards;
-}
-.sidenav:hover #line3 {
-  animation: intoscene 0.34s ease-in 0.8s forwards;
-}
-.sidenav:hover #line4 {
-  animation: intoscene 0.34s ease-in 1s forwards;
-}
-
-.sidenav:hover #line5 {
-  animation: intoscene 0.34s ease-in 1.1s forwards;
-}
-
-.sidenav:hover #line6 {
-  animation: intoscene 0.34s ease-in 1.3s forwards;
-}
-
-.sidenav:hover #line7 {
-  animation: intoscene 0.34s ease-in 1.5s forwards;
-}
-
-.sidenav:hover #line8 {
-  animation: intoscene 0.34s ease-in 1.7s forwards;
-}
-
-.sidenav:hover #line9 {
-  animation: intoscene 0.34s ease-in 1.9s forwards;
-}
-
-@keyframes intoscene {
-  0% {transform: translateX(-160px); }
-  100% { transform: translateX(0px);}
+  margin: 0;
 }
 
 .sidenav p::after {
@@ -95,6 +40,7 @@
   content: '';
   top: 0;
   left: 0;
+  border-top: 1px solid #e7e7e7;
 }
 
 .sidenav:hover p::after {
@@ -109,20 +55,15 @@
 }
 
 .sidenav small {
-  opacity: 0;
-  font-size: 14px; 
-  line-height: 1.5rem;
+  text-transform: capitalize;
+  font-family: 'inter tight',sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0 0 4px 0; 
+  cursor: pointer;
+  letter-spacing: 0px;
 }
 
 .sidenav small:hover {
-  color: #10c56c;
-}
-
-
-.sidenav:hover small {
-  opacity: 1;
-}
-
-.sidenav:hover {
-  box-shadow: 0px 0px 0px transparent;
+  color: #ff3d00;
 }
