--- a/components/modules/layout.module.css
+++ b/components/modules/layout.module.css
@@ -11,6 +11,16 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  margin: 0;
+}
+
+.layout ul, .layout ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 1.24rem;
+    line-height: 2rem;
+    text-transform: capitalize;
 }
 
 .iscontain {
@@ -28,5 +38,11 @@
   color: #272727;
   margin-left: 32vw;
   margin-top: 24vh;
+  box-sizing: border-box;
+}
+
+.bod {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
