--- a/components/modules/header.module.css
+++ b/components/modules/header.module.css
@@ -1,42 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .isheader {
   position: fixed;
   z-index: 999;
-  background-color: #ff3d00;
   display: flex;
   flex-direction: row;
-  height: 56px;
+  justify-content: space-between;
+  height: 64px;
   width: 100vw;
-  margin-bottom: -56px;
-  border-bottom: 1px solid #d7d7d7;
+  margin-bottom: -64px;
+  border-bottom: 1px solid #414141;
   align-items: center;
   padding: 0 32px;
   transition: all 0.2s ease-out;
   box-sizing: border-box;
+  background-color: #272727;
 }
 
-.isheader:hover {
-  border-bottom: 1px solid #10d56d;
-}
 
-.isheader a {
-  font-family: 'Readex Pro',sans-serif;
-  font-size: 16px;
-  font-weight: 300;
+.brander a {
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 18px;
+  font-weight: 600;
   letter-spacing: 0px;
   opacity: 1;
   color: white;
   text-transform: capitalize;
   transition: all 0.15s ease-in;
-  position: relative;
   padding-bottom: 0px;
   line-height: 1rem;
-  transform: translatey(-40px);
   text-decoration: none;
+  cursor: pointer;
 }
 
+.other a {
+  font-family: 'Inter Tight',sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  margin-left: 24px;
+  cursor: pointer;
+  transition: all 0.15s ease-in;
+  padding-bottom: 2px;
+}
 
-.isheader:hover a {
-  transform: translatex(0px);
+.other a::after {
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  content: '';
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid #53dd6c;
+}
+
+.other a:hover::after {
+  animation: headingline 0.17s ease-out forwards;
+}
+
+@keyframes headingline {
+  0% {
+    width: 0%;
+    margin-left: 50%;
+  }
+  100% {
+    width: 100%;
+    margin-left: 0%;
+  }
 }
