--- a/components/modules/layout.module.css
+++ b/components/modules/layout.module.css
@@ -1,64 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
 
 
 .layout {
   width: 100vw;
   height: 100%;
-  background-color: #ffffff;
-  color: #272727;
+  background-color: #272727;
+  color: #ffffff;
   font-family: 'Inter Tight',sans-serif;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
-.layout ul, .layout ol {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    font-size: 1.24rem;
-    line-height: 2rem;
-    text-transform: capitalize;
-}
-
-.iscontain {
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  height: calc(100vh-56px);
-  box-sizing: border-box;
-}
-
-.box {
-  width: 48vw;
-  height: 100vh;
-  display: flex;
+.light {
+  background-color: #ffffff;
   color: #272727;
-  margin-left: 28vw;
-  margin-top: 20vh;
-  box-sizing: border-box;
 }
 
 .bod {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-@media screen and (min-width: 415px) and (max-width: 768px) {
-  .box {
-    width: 60vw;
-    margin-left: 34vw;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .box {
-    width: 100vw;
-    margin-left: 0;
-    padding: 0 1.2rem;
-    box-sizing: border-box;
-  }
 }
