--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -5,78 +5,9 @@
   flex-direction: column;
   position: fixed;
   z-index: 999;
-  background-color: #ffffff;
-  width: 20vw;
-  height: 80vh;
-  padding: 32px 32px 32px 32px ;
-  transition: all 0.3s ease-out;
-  margin-top: 14vh;
-  border-right:1px solid #d7d7d7;
-  box-sizing: border-box;
-}
-
-.sidenav a {
-  text-decoration: none;
-}
-
-.sidenav p {
-  font-family: 'Inter Tight',sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  opacity: 1;
-  color: #474747;
-  text-transform: capitalize;
-  transition: all 0.25s ease-in;
-  position: relative;
-  padding: 4px 0;
-  line-height: 1.64rem;
-  margin: 0;
-}
-
-.sidenav p::after {
-  position: absolute;
-  width: 100%;
+  width: 25vw;
   height: 100%;
-  content: '';
-  top: 0;
-  left: 0;
-  border-top: 1px solid #e7e7e7;
-}
-
-.sidenav:hover p::after {
-  animation: gogreen 1s cubic-bezier(1.000, 0.015, 0.810, 0.995) forwards;
-}
-
-@keyframes gogreen {
-  0% { width: 0%; border-top: 1px solid #10c56c; height: 0%; }
-  33% { width: 100%; border-top: 1px solid #10c56c; height: 0; }
-  66% { width: 100% ; border-top: 1px solid #10c56c; height: 0%; }
-  100% { width: 0%; border-top: 1px solid #474747; height: 0%; }
-}
-
-.sidenav small {
-  text-transform: capitalize;
-  font-family: 'inter tight',sans-serif;
-  font-size: 18px;
-  line-height: 1.44rem;
-  font-weight: 300;
-  margin: 0 0 4px 0; 
-  cursor: pointer;
-  letter-spacing: 0px;
-}
-
-.sidenav small:hover {
-  color: #ff3d00;
-}
-
-@media screen and (min-width: 415px) and (max-width: 768px) {
-  .sidenav {
-    width: 28vw;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .sidenav {
-    display: none;
-  }
+  transition: all 0.3s ease-out;
+  border-right:1px solid #414141;
+  box-sizing: border-box;
 }
