--- a/components/modules/mother.module.css
+++ b/components/modules/mother.module.css
@@ -82,6 +82,7 @@
 
 .child {
   width: 75vw;
+  margin-left: 25vw;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -91,6 +92,10 @@
 @media screen and (min-width: 769px) {
   .mother {
     flex-direction: row;
+  }
+  .child {
+    padding-left: 4rem;
+    padding-right: 12rem;
   }
 } 
 
