--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -4,6 +4,7 @@
 
 .normbody, .normheading {
   --prim: #53dd6c;
+  --grey: #777777;
 }
 
 .reader {
@@ -82,7 +83,7 @@
 .normheading {
   font-family: 'Inter Tight',sans-serif;
   font-weight: 500;
-  color: var(--prim);
+  color: var(--grey);
   margin-bottom: 16px;
 }
 
@@ -120,9 +121,9 @@
 
 .normbody h4 {
   font-family: 'Inter Tight',sans-serif;
-  color: #878787;
+  color: var(--prim);
   letter-spacing: 0px;
-  font-weight: 400;
+  font-weight: bold;
 }
 
 .normbody code {
@@ -138,9 +139,11 @@
 }
 
 .normbody hr {
-  background: #414141;
   width: 56%;
   margin-top: 20px;
+  border-top: 1px solid #414141;
+  opacity: 0.2;
+  height: 0;
 }
 
 .normbody blockquote {
