--- a/components/modules/header.module.css
+++ b/components/modules/header.module.css
@@ -35,7 +35,7 @@
 
 .other a {
   font-family: 'Inter Tight',sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
   color: white;
   text-transform: uppercase;
@@ -45,6 +45,11 @@
   cursor: pointer;
   transition: all 0.15s ease-in;
   padding-bottom: 2px;
+  color: #878787;
+}
+
+.other a:hover {
+  color: white;
 }
 
 .other a::after {
