--- a/components/modules/mother.module.css
+++ b/components/modules/mother.module.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   min-height: 100vh;
   width: 100vw;
+  background-color: #272727;
 }
 
 .mother li {
@@ -87,6 +88,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  background-color: #272727;
 }
 
 @media screen and (min-width: 900px) {
