--- a/components/modules/sidenav.module.css
+++ b/components/modules/sidenav.module.css
@@ -4,16 +4,52 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  z-index: 999;
-  width: 21vw;
+  z-index: 998;
   height: 100%;
   transition: all 0.3s ease-out;
   border-right:1px solid #414141;
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 414px) {
+.sidenav a {
+  color: inherit;
+  text-decoration: inherit;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+@media screen and (min-width: 900px) {
+
+.sidenav {
+  width: 18vw;
+  padding: 128px 8px 32px 32px;
+}
+
+}
+
+@media screen and (max-width: 899px) and (min-width: 769px) {
+
+  .sidenav {
+    width: 18vw;
+    padding: 128px 8px 32px 32px;
+  }
+
+}
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+
+  .sidenav {
+    width: 20vw;
+    padding: 104px 8px 32px 24px;
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
   .sidenav {
     width: 100vw;
+    padding: 88px 8px 32px 16px;
   }
+
 }
