--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -90,8 +90,11 @@
 .normbody p {
   font-family: 'Inter Tight',sans-serif;
   line-height: 1.4em;
-  letter-spacing: 0.2px;
+  letter-spacing: 0.5px;
   font-weight: 400;
+  margin: 0;
+  padding: 32px 0 0 0;
+  color: #d7d7d7;
 }
 
 .normbody a {
@@ -151,15 +154,37 @@
   box-sizing: border-box;
 }
 
+@media screen and (min-width: 900px) {
+  .normbody p { font-size: 1rem;}
+}
+
+@media screen and (max-width: 899px) and (min-width: 769px) {
+
+  .normbody p { font-size: 1rem;}
+
+}
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+
+  .normbody p { font-size: 1rem;}
+
+}
+
+@media screen and (max-width: 640px) {
+
+  .normbody p { font-size: 1rem;}
+
+}
+
+
+
 @media screen and (min-width: 769px) {
   
   .normheading {
     font-size: 2.4rem;
   }
 
-  .normbody p {
-    font-size: 15px;
-  }
+
 
   .normbody h4 {
     font-size: 1.48rem;
