--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -8,6 +8,11 @@ body {
   color: white;
 }
 
+a {
+  color: #53dd6c;
+  text-decoration: none;
+}
+
 .col-g {
   color: #53dd6c;
 }
@@ -100,7 +105,7 @@ cite {
 }
 
 small {
-  font-size: 16px;
+  font-size: 12px;
   margin: 0.5rem 0 .75rem 0;
   font-family: var(--official);
   text-transform: uppercase;
@@ -117,11 +122,11 @@ p {
 }
 
 h6 {
-  font-size: 1.1rem;
-  font-weight: 300;
-  margin: 0.5rem 0 .75rem 0;
+  font-weight: 400;
+  margin: 0;
   line-height: 1.25;
-  font-family: 'STIX Two Text',serif;
+  font-family: 'Inter Tight',sans-serif;
+  text-transform: uppercase;
 }
 
 h5 {
@@ -182,6 +187,7 @@ h1 {
 
   p { font-size: 1rem;}
   h5 { font-size: 1.32rem;}
+  h6 { font-size: 12px;}
 
 }
 
@@ -190,6 +196,7 @@ h1 {
   p { font-size: 1rem;}
   h5 { font-size: 1.32rem;}
   h4 {font-size: 1.6rem; width: 100%;}
+  h6 { font-size: 12px;}
 
 }
 
@@ -200,8 +207,8 @@ h1 {
   h3 { font-size: 2.8rem; }
   h4 { font-size: 1.56rem; }
   h5 { font-size: 1.32rem; }
-  h6 { font-size: 1rem; }
   p { font-size: 1rem; }
+  h6 { font-size: 12px;}
 
 }
 
@@ -212,7 +219,7 @@ h1 {
  h3 { font-size: 2rem; }
  h4 { font-size: 1.32rem;}
  h5 { font-size: 1.32rem;}
- h6 { font-size: 15px; }
+ h6 { font-size: 12px;}
  p { font-size: 1rem; }
  small { font-size: 12px; }
 
