--- a/components/modules/gretil.module.css
+++ b/components/modules/gretil.module.css
@@ -1,7 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
 .gretil {
     display: flex;
     flex-direction: column;
     background-color: #272727;
     color: white;
     height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.gretilindex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 20%;
+}
+
+.ofnum {
+    font-family: 'Inter Tight',sans-serif;
+    color: #878787;
+    box-sizing: border-box;
+}
+
+.ofnumashead {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 20%;
+}
+
+
+.ofline {
+    font-family: 'STIX Two Text',serif;
+    color: white;
+    box-sizing: border-box;
+}
+
+@media screen and (min-width: 900px) {
+
+.gretil {
+    margin: 0 0 4px 0;
+}
+
+.ofnum {
+    font-size: 12px;
+}
+
+.ofline {
+    font-size: 18px;
+    margin-left: 4px;
+}
+
+}
+
+@media screen and (max-width: 899px) and (min-width: 769px) {
+
+    .ofnum {
+        font-size: 12px;
+    }
+
+    .ofline {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+
+    .ofnum {
+        font-size: 12px;
+    }
+    .ofline {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (max-width: 640px) {
+
+    .ofnum {
+        font-size: 10px;
+    }
+    .ofline {
+        font-size: 16px;
+    }
+
 }
