--- a/components/modules/header.module.css
+++ b/components/modules/header.module.css
@@ -15,6 +15,37 @@
   transition: all 0.2s ease-out;
   box-sizing: border-box;
   background-color: #272727;
+  overflow: hidden;
+}
+
+.isheader:hover {
+  box-shadow: 4px -6px 8px #212121 inset;
+}
+
+.isheader::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 1px;
+  content: '';
+  margin-left: 50%;
+  border-top: 1px solid #53dd6c;
+}
+
+.isheader:hover::after {
+  animation: headerfunk 0.56s cubic-bezier(1.000, 0.005, 0.000, 0.700) forwards;
+}
+
+@keyframes headerfunk {
+  0% {
+    width: 0%;
+    margin-left: 50%;
+  }
+100% {
+  width: 100%;
+  margin-left: 0%;
+}
 }
 
 
