--- a/styles/newstyles.css
+++ b/styles/newstyles.css
@@ -114,7 +114,7 @@ small {
 }
 
 p {
-  letter-spacing: 0.5px;
+  letter-spacing: 0px;
   line-height: 1.4em;
   margin: 0;
   padding: 32px 0 0 0;
@@ -144,7 +144,7 @@ h4 {
   line-height: 1.1;
   margin: 0.5rem 0 .75rem 0;
   font-weight: 500;
-  font-family: 'STIX Two Text',serif;
+  font-family: 'Inter Tight',sans-serif;
 }
 
 h3 {
@@ -152,7 +152,7 @@ h3 {
   font-weight: 600;
   line-height: 1.1;
   margin: 0.5rem 0 .75rem 0;
-  font-family: 'STIX Two Text',serif;
+  font-family: 'Inter Tight',sans-serif;
 }
 
 h2 {
@@ -160,7 +160,7 @@ h2 {
   font-weight: 900;
   line-height: 1;
   margin: 0.5rem 0 .75rem 0;
-  font-family: 'STIX Two Text',serif;
+  font-family: 'Inter Tight',sans-serif;
 }
 
 h1 {
@@ -169,7 +169,7 @@ h1 {
   line-height: 1;
   text-transform: uppercase;
   margin: 0.5rem 0 .75rem 0;
-  font-family: 'STIX Two Text',serif;
+  font-family: 'Inter Tight',sans-serif;
 }
 
 .gen-h {
